# rag-chatbot-maker

./: .env.example  .gitignore  DEPLOY.md  README.md  cli.py  pyproject.toml
app/: config.py  main.py
app/api/routes/: chat.py  ingest.py  memory.py
app/core/: embeddings.py  memory_bank.py  rag.py
app/db/: supabase.py  vector_store.py
app/ingestion/: crawler.py  loader.py  parser.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: chat-input.tsx  chat-panel.tsx  memory-panel.tsx  message-bubble.tsx  session-sidebar.tsx
frontend/src/lib/: api.ts  sessions.ts  types.ts
scripts/: crawl_data.py  crawl_naver_blog.py  embed_and_upload.py  parse_data.py
supabase/: hybrid_search.sql  setup.sql
